# descriptive

./: CHANGELOG  Descriptive-Char.html  Descriptive-Form.html  Descriptive-Formlet.html  Descriptive-JSON.html  Descriptive-Options.html  Descriptive.html  LICENSE  README.md  descriptive.cabal  descriptive.haddock  doc-index.html  index-frames.html  index.html  mini_Descriptive-Char.html  mini_Descriptive-Form.html  mini_Descriptive-Formlet.html  mini_Descriptive-JSON.html  mini_Descriptive-Options.html  mini_Descriptive.html  stack.yaml
src/: Descriptive.hs  Main.hs
src/Descriptive/: Char.hs  Form.hs  Formlet.hs  Internal.hs  JSON.hs  List.hs  Options.hs
src/test/: Main.hs
