name:                descriptive
version:             0.9.4
synopsis:            Self-describing consumers/parsers; forms, cmd-line args, JSON, etc.
description:         Self-describing consumers/parsers. See the README.md for more information. It is currently EXPERIMENTAL.
stability:           Experimental
homepage:            https://github.com/chrisdone/descriptive
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2015 Chris Done
category:            Parsing
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md, CHANGELOG

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Descriptive
                     Descriptive.Char
                     Descriptive.Form
                     Descriptive.Formlet
                     Descriptive.Options
                     Descriptive.JSON
  other-modules:     Descriptive.Internal
  build-depends:     aeson >= 0.7.0.5
                   , base >= 4.4 && <5
                   , bifunctors
                   , containers >= 0.5
                   , mtl
                   , scientific >= 0.3.2
                   , text
                   , transformers
                   , vector

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: src/test
    build-depends: base,
                   descriptive, transformers, containers, text, mtl, aeson, bifunctors,
                   HUnit,
                   hspec
